# sta-vpn-android

./: .gitmodules  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  wings_xposed_native.cpp
app/src/main/proto/: guardian.proto  wingsv.proto
app/src/main/res/color/: routing_mode_icon_tint.xml  routing_mode_label_color.xml
app/src/main/res/drawable/: bg_first_launch_primary_button.xml  bg_routing_mode_circle.xml  bg_service_state_off.xml  ic_clipboard_paste.xml  ic_close_circle.xml  ic_more_vert.xml  ic_qr_scan.xml  ic_routing_bypass.xml  ic_routing_whitelist.xml  ic_routing_xbypass.xml  ic_routing_xwhitelist.xml
app/src/main/res/layout/: activity_about_app.xml  activity_backend_profile_editor.xml  activity_guardian.xml  activity_proxy_logs.xml  activity_sharing_client_detail.xml  activity_sharing_stats.xml  activity_sharing_target_settings.xml  activity_subscriptions.xml  activity_ui_reorder_list.xml  activity_ui_settings.xml  activity_vk_auth_browser.xml  activity_vk_links.xml  activity_vk_oauth.xml  activity_vk_turn_profile_editor.xml  activity_wb_stream_settings.xml  dialog_guardian_import_confirm.xml  fragment_apps.xml  fragment_backend_profiles.xml  fragment_first_launch_auto_search_run.xml  fragment_first_launch_connection.xml  fragment_first_launch_vk_turn.xml  fragment_first_launch_xray.xml  fragment_profiles.xml  fragment_sharing.xml  item_app_routing_header.xml  item_backend_profile_entry.xml  item_profile_entry.xml  item_sharing_traffic_client.xml  item_subscription_entry.xml  item_ui_reorder_entry.xml  item_vk_link_entry.xml  preference_master_switch.xml
app/src/main/res/menu/: menu_bottom_tab_apps.xml  menu_bottom_tab_home.xml  menu_bottom_tab_profiles.xml  menu_bottom_tab_settings.xml  menu_bottom_tab_sharing.xml  menu_main_toolbar.xml  (+1 more)
config/pmd/: pmd.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
vpnhotspot-sharing-bridge/: build.gradle.kts
vpnhotspot-sharing-runtime/: build.gradle.kts
vpnhotspot/bridge/: build.gradle.kts
vpnhotspot/sharing-bridge/: build.gradle.kts
vpnhotspot/sharing-runtime/: build.gradle.kts
vpnhotspot/upstream-runtime/: build.gradle.kts
(+329 files in other folders)
